<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kan TV</string>

    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="tv">TV</string>
    <string name="movie">Movie</string>
    <string name="radio">Radio</string>
    <string name="file">File</string>
    <string name="recent">Recent</string>
    <string name="content">Content</string>
    <string name="settings">Settings</string>
    <string name="toggle_ratio">Scale</string>
    <string name="toggle_fullscreen">Fullscreen</string>
    <string name="enter_fullscreen">Fullscreen playback enabled</string>
    <string name="leave_fullscreen">Fullscreen playback disabled</string>
    <string name="toggle_landscape">Landscape/Portrait</string>
    <string name="landscape_playback">Landscape Playback</string>
    <string name="portrait_playback">Portrait Playback</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Toggle Player</string>
    <string name="toggle_render">Toggle Render</string>
    <string name="toggle_tflite">Toggle Tensorflowlite</string>
    <string name="show_info">Info</string>
    <string name="development_mode">Development Mode:</string>
    <string name="url">URL</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="start_time">start_time</string>
    <string name="current_time">current_time</string>
    <string name="play_time">play_time</string>
    <string name="pause_time">pause_time</string>
    <string name="wating">waiting...</string>
    <string name="buffering">buffering...</string>
    <string name="network_un_available">it seems network connection is unavailable, pls check</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_name">Name</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_video_codec">Video Codec</string>
    <string name="mi_audio_codec">Audio Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="quit">Quit</string>

</resources>
