<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".menu_app">
    <item
        android:id="@+id/action_tv"
        android:title="@string/tv"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_radio"
        android:title="@string/radio"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_movie"
        android:title="@string/movie"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_file"
        android:title="@string/file"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_recent"
        android:title="@string/recent"
        app:showAsAction="always" />
</menu>