<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".menu_app">
    <item
        android:id="@+id/action_toggle_ratio"
        android:title="@string/toggle_ratio"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_fullscreen"
        android:title="@string/toggle_fullscreen"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_landscape"
        android:title="@string/toggle_landscape"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_info"
        android:title="@string/show_info"
        app:showAsAction="never" />
</menu>